2002-10-29 Zoran Vasiljevic <zoran@archiware.com>

	* ChangeLog: added this file