@@ -1,6 +1,6 @@
-C Added\sthis\sfile\n
-D 2002-10-29T11:16:02
-F ChangeLog 7da2a7252a9874796eb50499b03b013c74f0376a
+C Added\s"-returnNodeCmd"\soption\sto\s"dom\screateNodeCmd".\n
+D 2002-10-29T17:11:12
+F ChangeLog c7426456c8e195f73b20fa9d6615b8e7ab1cdf9e
 F LICENSE c9ba7733dcfadb0ce00b4f2b0dd29dfef28a708a
 F Makefile.in 66936cbfa9580e3037d502f2e1d73aa112ed46d6
 F NPL-1_1Final.html 844d247f8cb7b5b3d08c7d3cd1acb91f983e5e3e
@@ -114,9 +114,9 @@ F generic/domxslt.c 937195e7d4315efa854f6139d7fe0508cc4f2219
 F generic/domxslt.h 77d19235cbf254d3ba46ae28088fdcbf98a4856a
 F generic/encodings.inc 9fc9705ffe9a8642f0aaba39fcc70119c34128d4
 F generic/expat_config.h 560c148d431f87fc99ae8553cf998f0d01b0db82
-F generic/nodecmd.c f8436a3180f7062c38c50b146d92af210bd8da53
-F generic/nodecmd.h 0225d87d05a9afc2ce0d5baf8966b076ffa71405
-F generic/tcldom.c fa1bce01b4555b6440385364303d1e2502a82828
+F generic/nodecmd.c efee6b4e07c64795c8224c122b74dc401e43d0e4
+F generic/nodecmd.h 20210ad9b4a3bdd6055175beca7bfdd8bd318a3f
+F generic/tcldom.c a058d1962b166b96c72c2ae31cdd046ab79904b8
 F generic/tcldom.h b06a092266deed3a050a824a8f1963b91e4c3649
 F generic/tclexpat.c 5920f376d971d29e33c6aa61249995e4a495aac3
 F generic/tclexpat.h 62e83591b9fff070825add84310f7f7cc8cff3b8
@@ -185,7 +185,7 @@ F xe/README 1b4c67a44ba2c29c643a3d646817d21c0ea064c5
 F xe/xe 3f83c3f5659176907d2d2d4a68e14f82f3defd78 x
 F xe/xe-input f9bfb526b00a5c77c8a5f8ad54fe8b06d868e570
 F xe/xe.bat 8622c5a70666a58d2316df568354c70593848098
-P a2099532cb1932dc41dceb28d00c7f89959d5e45
+P 9d23357e702309b4d27e3cd74b999e68d28bf98c
 U zoran
-Z 04d12c740b82e0981a679b2a67dee7ec
+Z 91e643bc1addbc4d6213d08eaadfe266
 # Remove this line to create a well-formed Fossil manifest.
